--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
@@ -20,7 +20,7 @@
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
-
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
