--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_010.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_010.cshtml
@@ -33,7 +33,7 @@
                         <div class="form-group">
                             <label for="IdCliente">Proveedor</label>
                             @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
-                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
