--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_020.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_020.cshtml
@@ -81,6 +81,12 @@
                             @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdProceso">Proceso</label>
+                            @Html.DropDownListFor(q => q.IdProceso, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control" })
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
