--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
@@ -127,7 +127,7 @@
 
 
 <script type="text/javascript">
-
+    CargarBodegaOrigen();
         $(function () {
             CargarBodegaOrigen();
             $("#IdSucursalOrigen").change(function () {
