--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
@@ -14,14 +14,16 @@
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransferencia)
     @Html.HiddenFor(q => q.IdSucursalOrigen)
-    @Html.HiddenFor(q => q.IdBodegaOrigen)
     @Html.HiddenFor(q => q.IdSucursal_Ing_Egr_Inven_Destino)
     @Html.HiddenFor(q => q.IdSucursal_Ing_Egr_Inven_Origen)
 
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_SucuDest)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_SucuOrig)
     @Html.HiddenFor(q => q.IdNumMovi_Ing_Egr_Inven_Destino)
-    @Html.HiddenFor(q => q.IdNumMovi_Ing_Egr_Inven_Origen)    
+    @Html.HiddenFor(q => q.IdNumMovi_Ing_Egr_Inven_Origen)
+
+
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     if (ViewBag.mensaje != null)
     {
@@ -75,7 +77,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBodegaOrigen">Bodega origen</label>
-                    @Html.DropDownListFor(q => q.IdBodegaOrigen, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdBodegaOrigen, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
                     @Html.ValidationMessageFor(q => q.IdBodegaOrigen, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -94,7 +96,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBodegaDest">Bodega destino</label>
-                    @Html.DropDownListFor(q => q.IdBodegaDest, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodegaDest", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdBodegaDest, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodegaDest" })
                     @Html.ValidationMessageFor(q => q.IdBodegaDest, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -135,11 +137,16 @@
 
 
 <script type="text/javascript">
+    $(function () {
+        CargarBodegaOrigen();
+        $("#IdSucursalOrigen").change(function () {
+            CargarBodegaOrigen();
+        });
 
-        $(function () {
-            $("#IdSucursalOrigen").change(function () {
-                CargarBodegaOrigen();
-            });
+        CargarBodegaDestino();
+        $("#IdSucursalDest").change(function () {
+            CargarBodegaDestino();
+        });
     });
 
 function CargarBodegaOrigen() {
