--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
@@ -14,6 +14,7 @@
     @Html.HiddenFor(q => q.IdEmpresa, new { @id= "IdEmpresa" })
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_SucuOrig)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_SucuDest)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     if (ViewBag.mensaje != null)
     {
@@ -128,10 +129,17 @@
 
 <script type="text/javascript">
     CargarBodegaOrigen();
-        $(function () {
+    CargarBodegaDestino();
+
+    $(function () {
             CargarBodegaOrigen();
             $("#IdSucursalOrigen").change(function () {
                 CargarBodegaOrigen();
+            });
+
+            CargarBodegaDestino();
+            $("#IdSucursalDest").change(function () {
+                CargarBodegaDestino();
             });
     });
 
@@ -163,12 +171,6 @@ function CargarBodegaOrigen() {
     };
 
 
-     $(function () {
-            CargarBodegaOrigen();
-         $("#IdSucursalDest").change(function () {
-             CargarBodegaDestino();
-            });
-    });
 
 function CargarBodegaDestino() {
     $("#IdBodegaDest").empty();
