--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
@@ -35,7 +35,7 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["IdProductoHijo"] = 0;
-            e.NewValues["IdUnidadMedida"] = null;
+            e.NewValues["IdUnidadMedida"] = "UNID";
             e.NewValues["Cantidad"] = 0;
         };
 
