--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_IngresoCompartido.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_IngresoCompartido.cshtml
@@ -84,7 +84,7 @@
         {
             column.FieldName = "Porcentaje";
             column.Caption = "Porcentaje";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(5);
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().SpinEdit(sp =>
@@ -103,11 +103,11 @@
 
         settings.Columns.Add(column =>
         {
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
             column.FieldName = "CargaGasto";
             column.Caption = "Carga gasto";
             column.Width = Unit.Percentage(10);
-            column.Visible = false;
+            column.Visible = true;
             column.EditorProperties().CheckBox(sp =>
             {
 
