--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_009.cshtml
@@ -78,6 +78,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_agrupado) Mostrar agrupado</label>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.box-body -->
