--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/_GridViewPartial_RecosteoInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AuditoriaInventario/_GridViewPartial_RecosteoInventario.cshtml
@@ -48,8 +48,8 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
 
-        settings.Columns.Add("nom_sucursal", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-        settings.Columns.Add("nom_bodega", "Bodega Origen").Width = System.Web.UI.WebControls.Unit.Percentage(40);
+        settings.Columns.Add("SucuOrigen", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(40);
+        settings.Columns.Add("BodegaORIG", "Bodega Origen").Width = System.Web.UI.WebControls.Unit.Percentage(40);
         settings.Columns.Add(column =>
         {
             column.FieldName = "tr_fecha";
