--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Index.cshtml
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_archivo_transferencia", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_archivo_transferencia", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
