--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Anular.cshtml
@@ -20,25 +20,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCblePadre">Cuenta padre</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCblePadre, settings =>
-               {
-                   settings.Name = "IdCtaCblePadre";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   settings.Properties.DropDownButton.Enabled = false;
-                   settings.ReadOnly = true;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
+                    @Html.Partial("_CmbCuenta_PlanCta", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCblePadre, "", new { @class = "text-danger" })
                 </div>
             </div>
