--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/_CmbCuenta_PlanCta.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/_CmbCuenta_PlanCta.cshtml
@@ -2,7 +2,7 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdCtaCble";
+        settings.Name = "IdCtaCblePadre";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
@@ -20,7 +20,7 @@
 
     })
     .BindList(new Core.Erp.Web.Areas.Contabilidad.Controllers.PlanDeCuentasController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Contabilidad.Controllers.PlanDeCuentasController().get_info_bajo_demanda)
-    .Bind(Model.IdCtaCble);
+    .Bind(Model.IdCtaCblePadre);
 
 
 }
